- some bugfixes for P4A_DB_Navigator were applied
- P4A_DB_Navigator now supports drag&drop (only active item and AJAX is active)
- P4A_DB_Navigator::allowMovement() was added to enable/disable drag&drop
- P4A_DB_Navigator::allowRootsMovement() was added to enable/disable drag&drop of root elements
- P4A_DB_Navigator::allowMovementToRoot() was added to enable/disable drag/drop of elements to root

1.99.4
- PEAR::Net_UserAgent_Detect 2.2.0 was added
- phpSniff library was dropped
- browser detection was updated to use PEAR::Net_UserAgent_Detect
- PEAR::File 1.2.2 was added
- PEAR::File_SWF 0.1 was added
- P4A_Mask_Image_Preview was dropped
- P4A_Mask_Preview was added
- P4A_Field auto preview was changed to support the new P4A_Mask_Preview
- P4A_Field support for SWF preview was added
- fixed a bug with js calendar CSS
- P4A_Field::setRichTextareaTheme() and P4A_Field::getRichTextareaTheme() were added to manage tinyMCE toolbars
- P4A_Field::setRichTextareaToolbar(), P4A_Field::getRichTextareaToolbar() and P4A_Field::getRichTextareaToolbars() were added to manage tinyMCE toolbars buttons

1.99.3
- a TinyFCK/ajax bug was solved
- P4A_Table_Col afterClick event bug was solved
- the default .htaccess was removed
- a bug in P4A_Field::getAsFile() was fixed
- greek translation was added (thanks to Ζαχαρίας Σδρέγας)

1.99.2
- a TinyFCK/ajax bug was solved
- rich_textarea is automatically disabled on handhelds

1.99.1
- P4A_ICONS_PATH is now used to generate the spinner path
- PEAR::MDB2 was updated to 2.1.0
- PEAR::MDB2_Driver_mssql was updated to 1.1.0
- PEAR::MDB2_Driver_mysql was updated to 1.1.0
- PEAR::MDB2_Driver_mysqli was updated to 1.1.0
- PEAR::MDB2_Driver_oci8 was updated to 0.3.0
- PEAR::MDB2_Driver_pgsql was updated to 1.1.0
- PEAR::MDB2_Driver_sqlite was updated to 1.1.0
- beforeClick and afterClick were added to P4A_Table_Col class
- a bug was fixed in P4A_Canvas::getAsString();
- a bug with P4A_Mask::dropCSS() and P4A_Mask::dropTempCSS() was solved